--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "1.0.0",
   "author": "Rayleigh Ko",
   "dependencies": {
+    "@wyze/gatsby-source-graphql": "^1.2.0",
+    "dotenv": "^6.2.0",
     "eslint-config-standard": "^12.0.0",
     "gatsby": "^2.0.76",
+    "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
@@ -22,7 +25,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy": "ggatsby build --prefix-paths && gh-pages -d public -b master",
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
