--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "build": "gatsby build",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "develop": "gatsby develop",
-    "format": "prettier --write '**/*.js'",
+    "format": "prettier --write '**/*.js' '**/*.md'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
