--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dateformat": "^3.0.3",
     "dotenv": "^6.2.0",
     "emotion-theming": "^10.0.7",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "gatsby": "^2.0.76",
     "gatsby-plugin-canonical-urls": "^2.0.10",
